--- a/one-year-in.html
+++ b/one-year-in.html
@@ -202,6 +202,12 @@ We want to focus and cut out the fat, which should also
 give teammates more bandwidth to just get sh** done.</p>
             </div>
             <!-- /.entry-content -->
+<section class="well" id="related-posts">
+    <h4>Related Posts:</h4>
+    <ul>
+        <li><a href="http://kplaney.github.io/ip-part-1.html">IP primer for biotech startups</a></li>
+    </ul>
+</section>
         </article>
     </section>
 
